mailcow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mailcow-ingress
  namespace: mailcow
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
  - host: webmail.gamifying.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: roundcube-service
            port:
              number: 80
  tls:
  - hosts:
    - webmail.gamifying.dev
    secretName: mailcow-tls-cert
